Removed references to e2e folder

--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "install-frontend": "cd frontend && npm install",
     "start-backend": "cd backend && npm start",
     "start-frontend": "cd frontend && npm start",
-    "install-e2e": "cd e2e && npm install",
     "start": "(npm run start-backend) & (npm run start-frontend)",
     "zip": "bestzip Assignment8.Submission.zip e2e/tests/* frontend/src/* backend/sql/* backend/src/* backend/api/*",
-    "postinstall": "(npm run install-backend) && (npm run install-frontend) && (npm run install-e2e)"
+    "postinstall": "(npm run install-backend) && (npm run install-frontend)"
   },
   "dependencies": {
     "@mui/joy": "^5.0.0-alpha.37"
