Web Player plays music on Home page
With hard-coded Access Token and Spotify track URI passed into it, the Web Player can successfully play song on Home page after clicking on "Play/ Pause" button. Music also pauses when clicking on "Play/ Pause" button.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,5 +71,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3010"
+  "options": {
+    "allowedHosts": ["localhost", ".localhost"],
+    "proxy": "https://localhost:3010/"
+  }
 }
