--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,9 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "request": "^2.88.2"
+  },
+  "options": {
+    "allowedHosts": ["localhost", ".localhost"],
+    "proxy": "https://localhost:3010/"
   }
 }
