updated backend with database and requests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,6 @@
   },
   "options": {
     "allowedHosts": ["localhost", ".localhost"],
-    "proxy": "http://localhost:3010"
+    "proxy": "https://localhost:3010"
   }
 }
