--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "pg-test": "^1.0.6"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "body-parser": "*",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -46,7 +47,10 @@
     }
   },
   "options": {
-    "allowedHosts": ["localhost", ".localhost"],
+    "allowedHosts": [
+      "localhost",
+      ".localhost"
+    ],
     "proxy": "https://localhost:3010/"
   }
 }
