--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "emoji-picker-react": "*",
     "prop-types": "*",
     "react": "*",
+    "react-dom": "^18.2.0",
     "react-router": "*",
     "react-router-dom": "*"
   },
@@ -26,7 +27,7 @@
     "msw": "*",
     "puppeteer": "*",
     "puppeteer-core": "*",
-    "react-scripts": "*"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -72,7 +73,10 @@
     ]
   },
   "options": {
-    "allowedHosts": ["localhost", ".localhost"],
+    "allowedHosts": [
+      "localhost",
+      ".localhost"
+    ],
     "proxy": "https://localhost:3010/"
   }
 }
